correcao exibir metodos lista 10

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\lennon\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/home/lennonalves/.netbeans/8.0.2/build.properties
